Put ollama pull at the top

--- a/examples/integrations/llm_providers/ollama.ipynb
+++ b/examples/integrations/llm_providers/ollama.ipynb
@@ -60,12 +60,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For this tutorial, we will get the 'stablelm2' model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ollama pull stablelm2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Import Necessay Packages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +94,7 @@
     }
    ],
    "source": [
-    "# %pip install uptrain -qU\n",
+    "%pip install uptrain -qU\n",
     "from uptrain import EvalLLM, Evals, Settings\n",
     "import json"
    ]
@@ -127,13 +143,6 @@
     "We will be using Stable LM 2 1.6B for this example. You can refer the [documentation](https://ollama.com/library/stablelm2) on Ollama.\n",
     "\n",
     "Remember to add \"ollama/\" at the beginning of the model name to let UpTrain know that you are using an Ollama model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **Note**: You can check if you have downloaded Stable LM 2 1.6B by running `!ollama list` <br><br> Else you can download it by `!ollama pull stablelm2`"
    ]
   },
   {
