--- a/docs/integrations/observation-tools/helicone.mdx
+++ b/docs/integrations/observation-tools/helicone.mdx
@@ -2,7 +2,7 @@
 title: Helicone
 ---
 [Helicone](https://www.helicone.ai/) helps you understand how your application is performing with its monitoring tools. 
-We will walk you through the use of Helicone for monitoring and log your UpTrain evaluations in Helicone Dashboard
+We will walk you through the use of Helicone for monitoring and log your UpTrain evaluations in Helicone Dashboards
 
 ## How to integrate?
 
@@ -14,7 +14,7 @@ We will walk you through the use of Helicone for monitoring and log your UpTrain
 
 <Steps>
     <Step title = "Define Your OpenAI and Helicone Key">
-    You can get your Helicone API keys [here](https://www.helicone.ai/developer) and OpenAI API key [here](https://platform.openai.com/api-keys)
+    You can get your Helicone API key [here](https://www.helicone.ai/developer) and OpenAI API key [here](https://platform.openai.com/api-keys)
     ```python
     import os
     HELICONE_API_KEY = os.environ["HELICONE_API_KEY"]
