--- a/docs/integrations/observation-tools/langfuse.mdx
+++ b/docs/integrations/observation-tools/langfuse.mdx
@@ -11,7 +11,7 @@ Scores can be used in a variety of ways in Langfuse:
 3. Fine Tuning: Filter and [export](https://langfuse.com/docs/export-and-fine-tuning) by scores as .csv or .JSONL for fine-tuning
 4. Analytics: Detailed score reporting and dashboards with drill downs into use cases and user segments
 
-In this guide we will walk you through the use of Langfuse to create traces and evaluate using UpTrain
+In this guide, we will walk you through using Langfuse to create traces and evaluate them using UpTrain.
 
 ## How to integrate?
 ### Setup
