--- a/examples/root_cause_analysis/rag_with_citation.ipynb
+++ b/examples/root_cause_analysis/rag_with_citation.ipynb
@@ -36,15 +36,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Let's clear the basics first!\n",
+    "By the end of this tutorial, you will be able to:\n",
+    "- Understand the failure cases in a RAG pipeline\n",
+    "- Perform Root Cause Analysis on your RAG pipeline\n",
+    "- Get actionable insights to improve your RAG pipeline\n",
     "\n",
-    "**What is RAG?** \n",
+    "Let's start by understanding what RAG is and how this tutorial will help you.\n",
     "\n",
-    "RAG is the process of utilising external knowledge to your LLM-based application. \n",
+    "## What is RAG?\n",
     "\n",
-    "For example: Imagine you have a knowledge document outlining various scenarios for handling customer queries (question). With an LLM-powered bot at your disposal, the goal is to provide users with accurate responses based on the information in the knowledge document.\n",
+    "RAG is the process of utilising external knowledge in your LLM-based application. \n",
     "\n",
-    "You can give an LLM relevant chunks of this information (retrieved context) to provide a better answer to user's query. The LLM can utilize certain portion of this retrieved context to generate a response."
+    "**For example:** Imagine you have a knowledge document outlining various scenarios for handling customer queries (question). With an LLM-powered bot at your disposal, the goal is to provide users with accurate responses based on the information in the knowledge document.\n",
+    "\n",
+    "You can give an LLM relevant chunks of this information (retrieved context) to provide a better answer to user's query. The LLM can utilize certain portion of this retrieved context to generate a response.\n"
    ]
   },
   {
