--- a/examples/root_cause_analysis/rag_with_citation.ipynb
+++ b/examples/root_cause_analysis/rag_with_citation.ipynb
@@ -249,7 +249,7 @@
    "source": [
     "## Let's verify these results\n",
     "\n",
-    "BTW for your ease here are is the complete information mentioned in the context we have used:\n",
+    "For your ease here are is the complete information mentioned in the context we have used:\n",
     "1. FedL was established in 2020. \n",
     "2. Using FedL you can send deliveries to over 1000+ cities in India including major cities like Bangalore, Mumbai and Delhi. \n",
     "3. Recently we crossed a milestone by completing 1 million deliveries. \n",
