--- a/examples/root_cause_analysis/rag_with_citation.ipynb
+++ b/examples/root_cause_analysis/rag_with_citation.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "|Failure Case|Explanation|Example|\n",
     "|--|--|--|\n",
-    "|**Poor Context Utilization**|The citations from the context are irrelevant to a user's query|The LLM cites \"We dont offer refunds\" from the context to a question \"Can I get a refund?\"|\n",
+    "|**Poor Context Utilization**|The citations from the context are irrelevant to a user's query|The LLM cites information on offers rather than refunds from a context containing information on both refunds and offers, for a question \"Can I get a refund?\"|\n",
     "|**Poor Retrieval**|The context given to an LLM does not have information relevant to the question|The user asks \"Do you deliver to Bangalore?\" but the context does not have any information to deliveries in Bangalore|\n",
     "|**Hallucinations**|The generated response is not supported by information present in the context|The LLM generates a response \"We deliver to Bangalore\" when the information present in the context is: \"We are going to start delivers in Bangalore soon\" |\n",
     "|**Poor Citation**|The response generated can not be verified with the citation|The LLM cites \"We deliver to Delhi\" from the context for a response saying \"We deliver to Bangalore\"|\n",
