--- a/examples/root_cause_analysis/rag_with_citation.ipynb
+++ b/examples/root_cause_analysis/rag_with_citation.ipynb
@@ -37,9 +37,9 @@
    "metadata": {},
    "source": [
     "By the end of this tutorial, you will be able to:\n",
-    "- Understand the failure cases in a RAG pipeline\n",
-    "- Perform Root Cause Analysis on your RAG pipeline\n",
-    "- Get actionable insights to improve your RAG pipeline\n",
+    "- Understand different failure modes of an RAG pipeline\n",
+    "- Learn how to use UpTrain to perform Root Cause Analysis and assign error mode for each of the failure cases.\n",
+    "- Get actionable insights to resolve those failures and improve your RAG pipeline\n",
     "\n",
     "Let's start by understanding what RAG is and how this tutorial will help you.\n",
     "\n",
@@ -47,9 +47,9 @@
     "\n",
     "RAG is the process of utilising external knowledge in your LLM-based application. \n",
     "\n",
-    "**For example:** Imagine you have a knowledge document outlining various scenarios for handling customer queries (question). With an LLM-powered bot at your disposal, the goal is to provide users with accurate responses based on the information in the knowledge document.\n",
+    "**For example:** Imagine an LLM-powered chatbot that answers users' queries by leveraging a set of FAQs and knowledge documents outlining the company's customer support policies.\n",
     "\n",
-    "You can give an LLM relevant chunks of this information (retrieved context) to provide a better answer to user's query. The LLM can utilize certain portion of this retrieved context to generate a response.\n"
+    "The LLM consumes the user query along with relevant information (context retrieved by vector database) and produces a response to solve the user query along with citations of the different sources which were actually utilized by the LLM for generating the response."
    ]
   },
   {
@@ -58,19 +58,17 @@
    "source": [
     "## How will this tutorial help?\n",
     "\n",
-    "Let's say you already have a RAG pipeline but you are not satisfied with the quality of responses you are getting.\n",
+    "So you have built an RAG application. The next step is to test it, find failure cases, and fix them. However, debugging these failure cases is not straightforward. There could be multiple reasons for failure—maybe the retrieval failed, the LLM is not able to utilize the retrieved context to generate a good response, it hallucinated, or even the user query itself was not clear.\n",
     "\n",
-    "Figuring out the root cause of this failure might be a bit difficult as RAG involves multiple steps and you would have to go through each step to figure out what went wrong.\n",
-    "\n",
-    "Through this tutorial we will try to walk you an easy way to figure out the failure cases in your RAG pipeline. Let's look at some major failure cases first:\n",
+    "To aide with this, UpTrain provides root cause analysis tools to figure out what exactly is going wrong with each failure case. RAG_WITH_CITATION is one such RCA template that helps in debugging RAG applications that output cited responses.\n",
     "\n",
     "|Failure Case|Explanation|Example|\n",
     "|--|--|--|\n",
-    "|**Poor Context Utilization**|The citations from the context are irrelevant to a user's query|The LLM cites information on offers rather than refunds from a context containing information on both refunds and offers, for a question \"Can I get a refund?\"|\n",
+    "|**Poor Context Utilization**|The LLM is not able to utilize all the information present in the context|The user asks \"Do you offer same-day delivery?\" The LLM replies, \"I am not sure\", even if the retrieved context has information that same-day delivery is not possible|\n",
     "|**Poor Retrieval**|The context given to an LLM does not have information relevant to the question|The user asks \"Do you deliver to Bangalore?\" but the context does not have any information to deliveries in Bangalore|\n",
     "|**Hallucinations**|The generated response is not supported by information present in the context|The LLM generates a response \"We deliver to Bangalore\" when the information present in the context is: \"We are going to start delivers in Bangalore soon\" |\n",
-    "|**Poor Citation**|The response generated can not be verified with the citation|The LLM cites \"We deliver to Delhi\" from the context for a response saying \"We deliver to Bangalore\"|\n",
-    "|**Incomplete Question**|The user's question itself does not make sense|The user asks something like: \"When delivery?\", \"What location?\"|"
+    "|**Incorrect Citation**|While the response is correct, it's not correctly cited, eroding users' trust|The LLM cites \"We deliver to Delhi\" from the context for a response saying \"We deliver to Bangalore\"|\n",
+    "|**Incomplete Question**|The user's question itself is unclear or does not make sense|The user asks something like: \"delivery?\", \"What location?\", \"ajdjwsp\"|"
    ]
   },
   {
@@ -116,23 +114,23 @@
     "|Parameter|Explanation|\n",
     "|--|--|\n",
     "|question|This is the query asked by your user.|\n",
-    "|context|This is the context that you pass to an LLM (retrieved context)|\n",
+    "|context|This is the context that you pass to an LLM (retrieved-context)|\n",
     "|response|The response generated by the LLM|\n",
-    "|cited_context|The relevant portion of the retrieved context that the LLM cites to generate response.|"
+    "|cited_context|The relevant portion of the retrieved context that the LLM cites along with the response.|"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = [\n",
     "    {\n",
-    "        \"question\": \"Can FedL send a delivery to Bangalore?\",\n",
+    "        \"question\": \"Can FedL deliver electronic devices?\",\n",
     "        \"context\": \"FedL was established in 2020. Using FedL you can send deliveries to over 1000+ cities in India including major cities like Bangalore, Mumbai and Delhi. Recently we crossed a milestone by completing 1 million deliveries. Using FedL you can deliver any goods under 10kg(not more than that) to anyone whether it be your friends or family. P.S.: We can't deliver electronic devices. You can also use FedL to deliver a car.\",\n",
-    "        \"response\": \"Yes, FedL can send a delivery to Bangalore.\",\n",
-    "        \"cited_context\": \"FedL was established in 2020.\",        \n",
+    "        \"response\": \"FedL offers deliveries to over 1000+ cities.\",\n",
+    "        \"cited_context\": \"Using FedL you can send deliveries to over 1000+ cities in India including major cities like Bangalore, Mumbai and Delhi.\",        \n",
     "    },\n",
     "    {\n",
     "        \"question\": \"Can I send a delivery to my friend living in the USA?\",\n",
@@ -209,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -219,8 +217,8 @@
       "{\n",
       "   \"question\": \"Can FedL send a delivery to Bangalore?\",\n",
       "   \"context\": \"FedL was established in 2020. Using FedL you can send deliveries to over 1000+ cities in India including major cities like Bangalore, Mumbai and Delhi. Recently we crossed a milestone by completing 1 million deliveries. Using FedL you can deliver any goods under 10kg(not more than that) to anyone whether it be your friends or family. P.S.: We can't deliver electronic devices. You can also use FedL to deliver a car.\",\n",
-      "   \"response\": \"Yes, FedL can send a delivery to Bangalore.\",\n",
-      "   \"cited_context\": \"FedL was established in 2020.\",\n",
+      "   \"response\": \"FedL offers deliveries to over 1000+ cities.\",\n",
+      "   \"cited_context\": \"Using FedL you can send deliveries to over 1000+ cities in India including major cities like Bangalore, Mumbai and Delhi.\",\n",
       "   \"error_mode\": \"Poor Context Utilization\",\n",
       "   \"error_resolution_suggestion\": \"Add intermediary steps so as the LLM can better understand context and generate a complete response\",\n",
       "   \"score_question_completeness\": 1,\n",
@@ -262,24 +260,24 @@
    "metadata": {},
    "source": [
     "### Poor Context Utilization\n",
-    "**When the citations are irrelevant to a user's query**"
+    "**When the LLM is not able to utilize all the information present in the context**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'question': 'Can FedL send a delivery to Bangalore?',\n",
+       "{'question': 'Can FedL deliver electronic devices?',\n",
        " 'context': \"FedL was established in 2020. Using FedL you can send deliveries to over 1000+ cities in India including major cities like Bangalore, Mumbai and Delhi. Recently we crossed a milestone by completing 1 million deliveries. Using FedL you can deliver any goods under 10kg(not more than that) to anyone whether it be your friends or family. P.S.: We can't deliver electronic devices. You can also use FedL to deliver a car.\",\n",
-       " 'response': 'Yes, FedL can send a delivery to Bangalore.',\n",
-       " 'cited_context': 'FedL was established in 2020.'}"
+       " 'response': 'FedL offers deliveries to over 1000+ cities.',\n",
+       " 'cited_context': 'Using FedL you can send deliveries to over 1000+ cities in India including major cities like Bangalore, Mumbai and Delhi.'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we can see that the user is asking about a specific delivery location but the LLM has cited irrelevant information on when FedL was established.  "
+    "Here we can see that the user whether FedL can deliver electronic devices or not. Even though the context clearly states that it is not possible, the LLM is not able to utilize it and returns an irrelevant response. "
    ]
   },
   {
@@ -319,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Poor Retrival\n",
+    "### Poor Retrieval\n",
     "**When the context given to the LLM doesn't have information related to the question**"
    ]
   },
@@ -439,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Poor Citations\n",
+    "### Incorrect Citations\n",
     "**When the generated citations can't verify the facts mentioned in the LLM generated response**"
    ]
   },
@@ -567,7 +565,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -581,9 +579,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
