--- a/docs/tutorials/open-source-evaluator.mdx
+++ b/docs/tutorials/open-source-evaluator.mdx
@@ -62,7 +62,7 @@ Now that we have our data, we can log it and evaluate it using UpTrain. We use t
 - `data`: The data you want to log and evaluate
 - `checks`: The evaluations you want to perform on your data
 
-You can find the list of all available evaluations [here](/key-components/evals).
+You can find the list of all available evaluations [here](/predefined-evaluations/overview).
 
 ```python
 results = eval_llm.evaluate(
