--- a/docs/tutorials/openai-evals.mdx
+++ b/docs/tutorials/openai-evals.mdx
@@ -221,7 +221,7 @@ client.add_checkset(
 ```
 
 #### Step 4: Add run
-A run is a combination of a dataset and a checkset. You can learn more about runs [here](/key-components/run).
+A run is a combination of a dataset and a checkset.
 
 You can add a run using the `add_run` method.
 
