--- a/docs/tutorials/uptrain-api-client.mdx
+++ b/docs/tutorials/uptrain-api-client.mdx
@@ -89,7 +89,7 @@ Now that we have our data, we can log it and evaluate it using UpTrain. We use t
 - `data`: The data you want to log and evaluate
 - `evals`: The evaluations you want to perform on your data
 
-You can find the list of all available evaluations [here](/key-components/evals).
+You can find the list of all available evaluations [here](/predefined-evaluations/overview).
 
 ```python
 results = client.log_and_evaluate(
