--- a/examples/experiments/compressed_vs_uncompressed.ipynb
+++ b/examples/experiments/compressed_vs_uncompressed.ipynb
@@ -44,7 +44,7 @@
         "**Overview**: In this notebook, we will compare the same mode, but compressed and non-compressed to measure the hit in accuracy due to compression. We will be using around 30 randomly picked examples from the Financial QA dataset and evaluate the response on different criteria to determine which of the two models performs better.\n",
           "This notebook benchmarks 2 variations of the same model called Roberta, one being noncompressed other being the compressed version using knowledge distillation.\n"
 
-          We also use UpTrain's metrics to further evaluate the outputs from both models
+          "We also use UpTrain's metrics to further evaluate the outputs from both models.\n"
         "\n",
         "\n"
       ]
