new change in llm compression notebook

--- a/examples/experiments/compressed_vs_uncompressed (1).ipynb
+++ b/examples/experiments/compressed_vs_uncompressed (1).ipynb
@@ -45,6 +45,12 @@
         "\n",
         "**What is knowledge distillation** :Knowledge distillation for Large Language Models (LLMs) is a technique aimed at reducing the computational demand of these large models by transferring their advanced capabilities to smaller models. It involves training a smaller model, referred to as the \"student,\" to mimic the behavior and performance of a larger model, known as the \"teacher.\"\n",
         "\n",
+        "**Outcome** : By the end of the tutorial, you will be able to:\n",
+        "\n",
+        "- Understand the impact of knowledge distillation on Roberta model.\n",
+        "- Learn how Uptrain's evaluations work\n",
+        "- Get insights on quality of ouputs of compressed vs uncompressed models.\n",
+        "\n",
         "\n"
       ]
     },
